Add breeze and mailhog

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - 33061:3306
     volumes:
       - ta23ablogdbdata:/var/lib/mysql
-
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - 1025:1025
+      - 8025:8025
 volumes:
   ta23ablogdbdata:
