--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "concurrently": "^9.0.1",
         "daisyui": "^5.4.3",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.1.17",
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.16"
+        "@tailwindcss/vite": "^4.1.16",
+        "tailwindcss": "^4.1.16"
     }
 }
